syntax = "proto3";
package services;

// === dspd service ===

service ImageSink {
    rpc Draw (DrawRequest) returns (DrawResponse) {}
}

message DrawRequest {
    int64 priority = 1;
    int64 timeslot = 2;
    bytes data = 3;
}

message DrawResponse {
    int32 code = 1;
    string status = 2;
}

// === textd service ===

service Textd {
    rpc Write (TextRequest) returns (TextResponse) {}
}

message TextRequest {
    string text = 1;
    string font = 2;
    int64 font_color = 3;
    int64 font_bg = 4;
}

message TextResponse {
    int32 code = 1;
    string status = 2;
}

// === imaged service ===

service Imaged {
    rpc Show (ImageRequest) returns (ImageResponse) {}
}

message ImageRequest {
    oneof source {
        string url = 1;
        bytes data = 2;
    }
}

message ImageResponse {
    int32 code = 1;
    string status = 2;
}

// === Generic service ===
service Generic {
    rpc Write (GenericRequest) returns (GenericResponse) {}
}

message GenericRequest {
}

message GenericResponse {
    int32 code = 1;
    string status = 2;
}

